--- a/every_where_trip/src/main/res/layout/activity_main.xml
+++ b/every_where_trip/src/main/res/layout/activity_main.xml
@@ -1,67 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:id="@+id/dl"
     tools:context="com.everywhere.trip.ui.main.activity.MainActivity">
 
     <RelativeLayout
+        android:id="@+id/rl_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:layout_height="@dimen/dp_50"
+        android:background="@color/c_fefefe">
 
-        <RelativeLayout
-            android:id="@+id/rl_title"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_72"
-            android:background="@color/c_fefefe">
+        <ImageView
+            android:id="@+id/iv_message"
+            android:layout_width="@dimen/dp_25"
+            android:layout_height="@dimen/dp_20"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp_22"
+            android:src="@mipmap/message" />
 
-            <ImageView
-                android:layout_width="@dimen/dp_36"
-                android:layout_height="@dimen/dp_36"
-                android:src="@mipmap/zhanweitu_touxiang"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp_20"
-                android:id="@+id/iv_header"/>
-
-            <ImageView
-                android:id="@+id/iv_message"
-                android:src="@mipmap/message"
-                android:layout_width="@dimen/dp_25"
-                android:layout_height="@dimen/dp_20"
-                android:layout_marginRight="@dimen/dp_22"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"/>
-
-        </RelativeLayout>
-
-        <FrameLayout
-            android:layout_below="@id/rl_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/fragment_container"/>
-
-        <android.support.design.widget.TabLayout
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:id="@+id/tab"
-            android:background="@color/c_f5f5f5"
-            app:tabSelectedTextColor="@color/c_fa6a13"
-            app:tabIndicatorColor="@color/transparent"
-            app:tabTextColor="@color/c_cecece"/>
-        
     </RelativeLayout>
-    
-    <android.support.design.widget.NavigationView
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/nv"
-        android:layout_gravity="left"
-        android:background="@color/transparent"
-        app:headerLayout="@layout/layout_nv_header"/>
+        android:layout_below="@id/rl_title" />
 
-</android.support.v4.widget.DrawerLayout>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_60"
+        android:layout_alignParentBottom="true"
+        android:background="@color/c_f5f5f5"
+        app:tabIndicatorColor="@color/transparent"
+        app:tabSelectedTextColor="@color/c_fa6a13"
+        app:tabTextColor="@color/c_cecece" />
+
+</RelativeLayout>
