--- a/every_where_trip/src/main/res/layout/item_location.xml
+++ b/every_where_trip/src/main/res/layout/item_location.xml
@@ -33,4 +33,24 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/tv_hot_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/c_636363"
+        android:text="热门城市"
+        android:layout_below="@id/rl_city"
+        android:textSize="@dimen/sp_12"
+        android:layout_margin="@dimen/dp_12"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rec_hot_city"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:background="@color/c_eaeaea"
+        android:layout_below="@id/tv_hot_city"
+        android:layout_marginBottom="@dimen/dp_20"
+        android:layout_alignLeft="@id/tv_hot_city"/>
+
 </RelativeLayout>
