--- a/every_where_trip/src/main/res/layout/item_spotinfo_content.xml
+++ b/every_where_trip/src/main/res/layout/item_spotinfo_content.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/dp_375"
         android:layout_height="@dimen/dp_200"
         android:id="@+id/img"
         android:scaleType="centerCrop"/>
